fix: modal image clipping and ensure image preview closes on outside click

--- a/blocks/modal.css
+++ b/blocks/modal.css
@@ -40,7 +40,7 @@
 .modal__container_type_preview {
   width: auto;
   height: auto;
-  max-width: 75vw;
+  max-width: 430px;
   max-height: 75vh;
   background: none;
   position: fixed;
